UPDATE: adds dropdown functionality and speak button functionality

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,17 @@
   <header>
     <p>'GET YOUR FREE QUOTE NOW'</p>
   </header>
+<div id="quote-container">
+  <p id="character-quote"></p>
+</div>
+<div id="character-pic">
+</div>
 <div class='container'>
   <form id="characterForm">
     Select character.
-      <select id="selectionInput" placeholder="Character" list="character" value="">
-      </select>
-      <div class='btn' id="btnSelect">GET QUOTE</div>
+    <select id="characterDropDown">
+    </select>
+    <div class='btn' id="quote-button">Speak!</div>
   </form>
   <p id="selection"></p>
 </div>
